add section Still Life Photography

--- a/index.html
+++ b/index.html
@@ -64,7 +64,51 @@
                 </div>
             </section>
             <section>
-
+                <h2 class="title">Still Life Photography</h2>
+                <div class="gal">
+                    <div class="gal_item">
+                        <img src="./assets/img/image_7.png" alt="Waterflow" class="gal_img">
+                        <div class="gal__title">
+                            <span class="gal__author">Robert Lukeman</span>
+                            <span>30 June 2020</span>
+                        </div>
+                    </div>
+                    <div class="gal_item gal_item_col_2">
+                        <img src="./assets/img/image_8.png" alt="Seaside" class="gal_img">
+                        <div class="gal__title">
+                            <span class="gal__author">Sean Oulashin</span>
+                            <span>5 September 2019</span>
+                        </div>
+                    </div>
+                    <div class="gal_item gal_item_col_2 gal_item_row_2">
+                        <img src="./assets/img/image_9.png" alt="Stones" class="gal_img">
+                        <div class="gal__title">
+                            <span class="gal__author">John Fowler</span>
+                            <span>10 August 2021</span>
+                        </div>
+                    </div>
+                    <div class="gal_item gal_item_row_2">
+                        <img src="./assets/img/image_10.png" alt="Island" class="gal_img">
+                        <div class="gal__title">
+                            <span class="gal__author">Dave Hoefler</span>
+                            <span>13 February 2021</span>
+                        </div>
+                    </div>
+                    <div class="gal_item gal_item_col_2">
+                        <img src="./assets/img/image_11.png" alt="Lavender" class="gal_img">
+                        <div class="gal__title">
+                            <span class="gal__author">Léonard Cotte</span>
+                            <span>5 September 2019</span>
+                        </div>
+                    </div>
+                    <div class="gal_item">
+                        <img src="./assets/img/image_12.png" alt="Tree" class="gal_img">
+                        <div class="gal__title">
+                            <span class="gal__author">Rob Mulally</span>
+                            <span>30 May 2020</span>
+                        </div>
+                    </div>
+                </div>
             </section>
             <section>
 
