add section Portrait and Fashion Photography

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <main>
+    <main class="main">
         <div class="container">
             <section>
                 <h2 class="title">Architectural Photography</h2>
@@ -111,7 +111,79 @@
                 </div>
             </section>
             <section>
-
+                <h2 class="title">Portrait and Fashion Photography</h2>
+                <div class="gal">
+                    <div class="gal_item">
+                        <img src="./assets/img/image_13.png" alt="Girl" class="gal_img">
+                        <div class="gal__title">
+                            <span class="gal__author">Pooja Chaudhary</span>
+                            <span>30 June 2020</span>
+                        </div>
+                    </div>
+                    <div class="gal_item gal_item_row_2">
+                        <img src="./assets/img/image_14.png" alt="Girl" class="gal_img">
+                        <div class="gal__title">
+                            <span class="gal__author">Dom Hill</span>
+                            <span>13 October 2021</span>
+                        </div>
+                    </div>
+                    <div class="gal_item">
+                        <img src="./assets/img/image_15.png" alt="Men" class="gal_img">
+                        <div class="gal__title">
+                            <span class="gal__author">Seth Doyle</span>
+                            <span>30 May 2020</span>
+                        </div>
+                    </div>
+                    <div class="gal_item">
+                        <img src="./assets/img/image_16.png" alt="Girl" class="gal_img">
+                        <div class="gal__title">
+                            <span class="gal__author">devn</span>
+                            <span>30 June 2020</span>
+                        </div>
+                    </div>
+                    <div class="gal_item gal_item_row_2">
+                        <img src="./assets/img/image_17.png" alt="Girl" class="gal_img">
+                        <div class="gal__title">
+                            <span class="gal__author">Noah Buscher</span>
+                            <span>13 February 2021</span>
+                        </div>
+                    </div>
+                    <div class="gal_item gal_item_row_2">
+                        <img src="./assets/img/image_18.png" alt="Women" class="gal_img">
+                        <div class="gal__title">
+                            <span class="gal__author">Sincerely Media</span>
+                            <span>13 February 2021</span>
+                        </div>
+                    </div>
+                    <div class="gal_item">
+                        <img src="./assets/img/image_19.png" alt="Boy" class="gal_img">
+                        <div class="gal__title">
+                            <span class="gal__author">Seth Doyle</span>
+                            <span>30 June 2020</span>
+                        </div>
+                    </div>
+                    <div class="gal_item gal_item_col_2">
+                        <img src="./assets/img/image_20.png" alt="Girls" class="gal_img">
+                        <div class="gal__title">
+                            <span class="gal__author">Melissa Askew</span>
+                            <span>29 April 2021</span>
+                        </div>
+                    </div>
+                    <div class="gal_item gal_item_col_2">
+                        <img src="./assets/img/image_21.png" alt="Boy" class="gal_img">
+                        <div class="gal__title">
+                            <span class="gal__author">Brooke Cagle</span>
+                            <span>5 August 2019</span>
+                        </div>
+                    </div>
+                    <div class="gal_item">
+                        <img src="./assets/img/image_22.png" alt="Couple" class="gal_img">
+                        <div class="gal__title">
+                            <span class="gal__author">Clem Onojeghuo</span>
+                            <span>1 July 2021</span>
+                        </div>
+                    </div>
+                </div>
             </section>
         </div>
     </main>
